[package]
name = "materialize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
cpal = "0.15.3"
ggez = "0.9.3"
native-windows-gui = "1.0.13"
rustfft = "6.2.0"
spectrum-analyzer = "1.5.0"
